Display Logo using Property Binding

--- a/HelloWorld-ANGULAR/src/app/app.component.html
+++ b/HelloWorld-ANGULAR/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div>
   <h1>{{this.title}}</h1>
 </div>
+<div class="image-container">
+  <img [src]="imgUrl" alt="THE BridgeLabz logo: a Bridge to Employement through a Lab Works."/>
+
+</div>
 
 <router-outlet></router-outlet>
