--- a/HelloWorld-ANGULAR/src/app/app.component.html
+++ b/HelloWorld-ANGULAR/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>{{this.title}}</h1>
 </div>
 <div class="image-container">
-  <img [src]="imgUrl" alt="THE BridgeLabz logo: a Bridge to Employement through a Lab Works."/>
+  <img [src]="imgUrl" alt="THE BridgeLabz logo: a Bridge to Employement through a Lab Works." (click)="onClick($event)"/>
 
 </div>
 
